--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,28 @@
 .strike-text {
   text-decoration: line-through
 }
+
+.circle-container{
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.task-circle {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 4px solid #2196F3;
+  transition: background 0.5s ease;
+}
+
+.strike-text{
+  text-decoration: line-through;
+  color: #757575;
+}
+
+.completion-status p {
+  font-size: 1.1rem;
+  color: #333;
+  margin: 5px 0;
+}
